monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4008/A4008.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4008;

grammar A4008  {

  abstract ArrayType = "a";

}
